[package]
name = "steam-rs"
version = "0.4.2"
authors = ["Garrett Howard <garrett@mersh.com>"]
edition = "2021"
description = "Safe Rust bindings for the Steam Web API"
readme = "README.md"
repository = "https://github.com/garhow/steam-rs"
documentation = "https://docs.rs/steam-rs"
license = "MIT"
keywords = ["steam", "api"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.11.0", features = ["https", "json-using-serde"] }
num_enum = "0.7.1"
rayon = "1.7.0"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
tokio = { version = "1.29.1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.2"
