[package]
name = "steam-rs"
version = "0.4.3"
authors = ["Garrett Howard <garrett@mersh.com>"]
edition = "2021"
description = "Safe Rust bindings for the Steam Web API"
readme = "README.md"
repository = "https://github.com/garhow/steam-rs"
documentation = "https://docs.rs/steam-rs"
license = "MIT"
keywords = ["steam", "api"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minreq = { version = "2.11.0", features = ["https", "json-using-serde"] }
num_enum = "0.7.2"
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4.3"
